fix token placement on mobile

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -236,8 +236,8 @@ button:hover {
   height: 80px;
   width: 80px;
   @media (max-width: 500px) {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
   }
 }
 
